--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   </head>
   <body>
     <div class="header">
-      
+      <div class="logo">
+      </div>
+
+      <div class="menu">
+      </div>
     </div>
   </body>
 </html>
