--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body>
+    <div id="header">
+      
+    </div>
+    <script>
+      fetch("header.html")
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById("header").innerHTML = data;
+      });
+    </script>
   </body>
 </html>
