--- a/header.html
+++ b/header.html
@@ -9,8 +9,8 @@
       <div class="menu">
         <div class="menubar">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#">Consultation</a></li>
             <li><a href="#">Hobbies</a></li>
             <li><a href="#">Contact Us</a></li>
