--- a/header.html
+++ b/header.html
@@ -10,7 +10,15 @@
         <div class="menubar">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li>
+                <a href="#">About</a>
+                <ul class="submenu">
+                    <li><a href="#">I</a></li>
+                    <li><a href="#">Me</a></li>
+                    <li><a href="#">Myself</a></li>
+                    <li><a href="#">Myselffeeeees</a></li>
+                </ul>
+            </li>
             <li><a href="#">Consultation</a></li>
             <li><a href="#">Hobbies</a></li>
             <li><a href="#">Contact Us</a></li>
