--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
             <div class="menubar">
                 <ul>
                     <li class="underline_current" ><a href="#">Home</a></li>
-                    <li><a href="#">About</a>
+                    <li><a href="about.html">About</a>
                          <ul class="submenu">
                             <li><a href="#">Service 1</a></li>
                             <li><a href="#">Service 2</a></li>
