--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
         <div class="menu">
             <div class="menubar">
                 <ul>
-                    <li class="underline_current" ><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a>
                          <ul class="submenu">
                             <li><a href="#">Service 1</a></li>
