--- a/header.html
+++ b/header.html
@@ -20,10 +20,7 @@
                     <li><a href="#">Feedback</a></li>
                 </ul>
             </div>
-            <div class="menuicon">
-                <div class="icon">
-                    <i class="fa fa-bars"></i>
-                </div>
+            <div class="mobilebar">
             </div>
         </div>
     </div>
