--- a/header.html
+++ b/header.html
@@ -1,26 +1,32 @@
- <div class="navbar">
-        <div class="logo">
-            <a href="#">
-                <img src="image/logo.png">
-            </a>
-        </div>
-        <div class="menu">
-            <div class="menubar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a>
-                         <ul class="submenu">
-                            <li><a href="#">Service 1</a></li>
-                            <li><a href="#">Service 2</a></li>
-                            <li><a href="#">Service 3</a></li>
-                         </ul>
-                    </li>
-                    <li><a href="#">Content</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Feedback</a></li>
+
+    <div class="header">
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/logo.png" alt="Logo.png">
+        </a>
+      </div>
+
+      <div class="menu">
+        <div class="menubar">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li>
+                <a href="#">About</a>
+                <ul class="submenu">
+                    <li><a href="#">I</a></li>
+                    <li><a href="#">Me</a></li>
+                    <li><a href="#">Myself</a></li>
+                    <li><a href="#">Myselffeeeees</a></li>
                 </ul>
-            </div>
-            <div class="mobilebar">
-            </div>
+            </li>
+            <li><a href="#">Consultation</a></li>
+            <li><a href="#">Hobbies</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
         </div>
+
+        <div class="mobilebar">
+        </div>
+      </div>
     </div>
