--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
                 <ul class="submenu">
                     <li><a href="#">I</a></li>
                     <li><a href="#">Me</a></li>
