--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="header">
       
     </div>
-    <script defer>
+    <script>
       
       fetch("header.html")
       .then(res => res.text())
