--- a/header.html
+++ b/header.html
@@ -13,14 +13,14 @@
             <li>
                 <a href="about.html">About</a>
                 <ul class="submenu">
-                    <li><a href="#">I</a></li>
-                    <li><a href="#">Me</a></li>
-                    <li><a href="#">Myself</a></li>
-                    <li><a href="#">Myselffeeeees</a></li>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Promotors</a></li>
+                    <li><a href="#">Vision</a></li>
+                    <li><a href="#">Advisor</a></li>
                 </ul>
             </li>
-            <li><a href="#">Consultation</a></li>
-            <li><a href="#">Hobbies</a></li>
+            <li><a href="#">Progammes</a></li>
+            <li><a href="#">Faculty</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
