--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
       .then(res => res.text())
       .then(data => {
         document.getElementById("header").innerHTML = data;
-        
+        //     https://gnm-personal.github.io/student_training/null , #, index.html
+        // https:
+        // null
+        // gnm-personal.github.io
+        // student_training
+        // null
         let currentPage = window.location.pathname.split("/").pop();
+        if ( !currentPage or currentPage == "#" ) {
+          currentPage = "index.html";
+        }
         // menu me anchor tak pahuchne ka tareeka
         let links = document.querySelectorAll(".menu .menubar ul li a");
         // hr anchor tag ko process karenge
@@ -24,6 +32,7 @@
           //pehle  anchor tag ka href ki value save karenge
           let linkPage = link.getAttribute("href");
           console.log("Attribute Value: " , linkPage);
+          
           if(!linkPage) return;
   
           if (linkPage == currentPage) {
