--- a/header.html
+++ b/header.html
@@ -10,8 +10,9 @@
         <div class="menubar">
           <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li>
-                <a href="about.html">About</a>
+                <a href="#">Progammes</a>
                 <ul class="submenu">
                     <li><a href="#">History</a></li>
                     <li><a href="#">Promotors</a></li>
@@ -19,7 +20,6 @@
                     <li><a href="#">Advisor</a></li>
                 </ul>
             </li>
-            <li><a href="#">Progammes</a></li>
             <li><a href="#">Faculty</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
