--- a/header.html
+++ b/header.html
@@ -10,17 +10,38 @@
         <div class="menubar">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
             <li>
-                <a href="#">Progammes</a>
+                <a href="">About</a>
                 <ul class="submenu">
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Promotors</a></li>
-                    <li><a href="#">Vision</a></li>
-                    <li><a href="#">Advisor</a></li>
+                    <li><a href="#">Company Overview</a></li>
+                    <li><a href="#">Mission & Vision</a></li>
+                    <li><a href="#">Founder's Message</a></li>
+                    <li><a href="#">Why Choose Yaxor?</a></li>
+                    <li><a href="#">Our Values</a></li>
                 </ul>
             </li>
-            <li><a href="#">Faculty</a></li>
+            <li>
+                <a href="">Progammes</a>
+                <ul class="submenu">
+                    <li><a href="#">Software Development</a></li>
+                    <li><a href="#">Testing & QA</a></li>
+                    <li><a href="#">Digital Media & OTT Services</a></li>
+                    <li><a href="#">Consulting</a></li>
+                    <li><a href="#">Training & Skill Development</a></li>
+                    <li><a href="#">Events & Education</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Technologies</a>
+                <ul class="submenu">
+                    <li><a href="#">Frontend Technologies</a></li>
+                    <li><a href="#">Backend Technologies</a></li>
+                    <li><a href="#">Databases</a></li>
+                    <li><a href="#">Testing Tools</a></li>
+                    <li><a href="#">Design Tools</a></li>
+                    <li><a href="#">OTT Media Tools</a></li>
+                </ul>
+            </li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
