--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-                <a href="">About</a>
+                <a href="">About Us</a>
                 <ul class="submenu">
                     <li><a href="#">Company Overview</a></li>
                     <li><a href="#">Mission & Vision</a></li>
@@ -21,7 +21,7 @@
                 </ul>
             </li>
             <li>
-                <a href="">Progammes</a>
+                <a href="">Services</a>
                 <ul class="submenu">
                     <li><a href="#">Software Development</a></li>
                     <li><a href="#">Testing & QA</a></li>
