--- a/header.html
+++ b/header.html
@@ -47,6 +47,9 @@
         </div>
 
         <div class="mobilebar">
+            <div class="hamburger">
+                <span></span>
+            </div>
         </div>
       </div>
     </div>
