--- a/header.html
+++ b/header.html
@@ -46,10 +46,6 @@
           </ul>
         </div>
 
-        <div class="mobilebar">
-            <div class="hamburger">
-                <span></span>
-            </div>
-        </div>
+        <div class="mobilebar"></div>
       </div>
     </div>
